samples/_failures_safe/1761617931_a59f13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f200613.c: In function ‘process_event’:
./samples/SAFE/__tmp_1f200613.c:152:13: error: expected expression at end of input
  152 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_1f200613.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f200613.c:152:13: error: expected declaration or statement at end of input
